Adding a new solution with CompletableFuture & Loom